formatting through css; added name and picture

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Basic Webpage</title>
+    <title>Mehana's Webpage</title>
 </head>
 
 <body>
@@ -15,6 +15,14 @@
         <div class="menu-item"><a href="#">Projects</a></div>
         <div class="menu-item"><a href="#">Contact</a></div>
     </div>
+
+    <div class="name">
+        <h1>Mehana Nagarur</h1>
+        <div class="link1"><a href="https://github.com/mehanana/mehanana">Github</a></div>
+        <div class="link2"><a href="https://www.linkedin.com/in/mehana-nagarur">LinkedIn</a></div>
+        <div class="link3"><a href="">Email</a></div>
+    </div>
+
     <!-- Here is a section for the content of your page -->
     <div class="content">
         <h1>About Me</h1>
@@ -23,6 +31,7 @@
             is an example of a Heading. The div tags above are examples of containers
             within which each "section" of the webpage is contained.
         </p>
+        <img src="C:\Users\mehan\OneDrive\Pictures\profile pic 2.0.jpg", width="20%", height="20%">
     </div>
 </body>
 
