--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             is an example of a Heading. The div tags above are examples of containers
             within which each "section" of the webpage is contained.
         </p>
-        <img src="C:\Users\mehan\OneDrive\Pictures\profile pic 2.0.jpg", width="20%", height="20%">
+        <img src="images\profile pic 2.0.jpg", width="20%", height="20%">
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
