--- a/index.html
+++ b/index.html
@@ -11,17 +11,44 @@
 
 <body>
     <!-- Here is a section for menu bar -->
-    <div class="menu">
-        <div class="menu-item"><a href="index.html">About Me</a></div>
-        <div class="menu-item"><a href="#">Projects</a></div>
-        <div class="menu-item"><a href="#">Contact</a></div>
-    </div>
+     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <a class="navbar-brand" href="#About-Me">Mehana's Website</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Experience</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Skills</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+          </ul>
+        </div>
+      </nav>
 
-    <div class="name">
-        <h1>Mehana Nagarur</h1>
-        <div class="link1"><a href="https://github.com/mehanana/mehanana">Github</a></div>
-        <div class="link2"><a href="https://www.linkedin.com/in/mehana-nagarur">LinkedIn</a></div>
-        <div class="link3"><a href="">Email</a></div>
+    <div id="home">
+        <div class="home-content">
+          <h1>Hi! I'm Mehana Nagarur.</h1>
+          <h2>BS Computer Science and Behavioral Neuroscience</h2>
+          <div>
+            <div class="social-icons">
+              <a href="https://github.com/mehanana/mehanana">Github</a>
+              <a href="https://www.linkedin.com/in/mehana-nagarur">LinkedIn</a>
+              <a href="mailto:mehana.nagarur@gmail.com">Email</a>
+            </div>
+          </div>
+        </div>
     </div>
 
     <!-- Here is a section for the content of your page -->
@@ -34,6 +61,7 @@
         </p>
         <img src="images\profile pic 2.0.jpg", width="20%", height="20%">
     </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
