put in logos for the links and updated color scheme + font

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <body>
     <!-- Here is a section for menu bar -->
-     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#About-Me">Mehana's Website</a>
+     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <a class="navbar-brand" href="#home">Mehana's Website</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">About Me</a>
+              <a class="nav-link" href="#About-Me">About Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Experience</a>
@@ -43,16 +43,25 @@
           <h2>BS Computer Science and Behavioral Neuroscience</h2>
           <div>
             <div class="social-icons">
-              <a href="https://github.com/mehanana/mehanana">Github</a>
-              <a href="https://www.linkedin.com/in/mehana-nagarur">LinkedIn</a>
-              <a href="mailto:mehana.nagarur@gmail.com">Email</a>
+              <a href="https://github.com/mehanana/mehanana">
+                <img src="images\github-logo.png"
+                style="width:15%;height:15%;">
+              </a>
+              <a href="https://www.linkedin.com/in/mehana-nagarur">
+                <img src="images\linkedin-logo.png"
+                style="width:15%;height:15%;">
+              </a>
+              <a href="mailto:mehana.nagarur@gmail.com">
+                <img src="images\email-logo.png"
+                style="width:15%;height:15%;">
+              </a>
             </div>
           </div>
         </div>
     </div>
 
     <!-- Here is a section for the content of your page -->
-    <div class="content">
+    <div class="content", id="About-Me">
         <h1>About Me</h1>
         <p>
             This is an example of some placeholder paragraph text. The h1 tag above
