--- a/index.html
+++ b/index.html
@@ -61,14 +61,16 @@
     </div>
 
     <!-- Here is a section for the content of your page -->
-    <div class="content", id="About-Me">
+    <div id="About-Me">
+      <div class="content">        
         <h1>About Me</h1>
         <p>
             This is an example of some placeholder paragraph text. The h1 tag above
             is an example of a Heading. The div tags above are examples of containers
             within which each "section" of the webpage is contained.
         </p>
-        <img src="images\profile pic 2.0.jpg", width="20%", height="20%">
+        <img src="images\profile pic 2.0.jpg", class="profile-pic circle-frame">
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
