--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="#">Skills</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#Contact">Contact</a>
               </li>
           </ul>
         </div>
@@ -43,15 +43,15 @@
           <h2>BS Computer Science and Behavioral Neuroscience</h2>
           <div>
             <div class="social-icons">
-              <a href="https://github.com/mehanana/mehanana">
+              <a href="https://github.com/mehanana/mehanana" target="_blank" rel="noopener noreferrer">
                 <img src="images\github-logo.png"
                 style="width:15%;height:15%;">
               </a>
-              <a href="https://www.linkedin.com/in/mehana-nagarur">
+              <a href="https://www.linkedin.com/in/mehana-nagarur" target="_blank" rel="noopener noreferrer">
                 <img src="images\linkedin-logo.png"
                 style="width:15%;height:15%;">
               </a>
-              <a href="mailto:mehana.nagarur@gmail.com">
+              <a href="mailto:mehana.nagarur@gmail.com" target="_blank" rel="noopener noreferrer">
                 <img src="images\email-logo.png"
                 style="width:15%;height:15%;">
               </a>
@@ -60,22 +60,58 @@
         </div>
     </div>
 
-    <!-- Here is a section for the content of your page -->
     <div id="About-Me">
       <div class="content">        
-        <h1>About Me</h1>
-        <p>
-            This is an example of some placeholder paragraph text. The h1 tag above
-            is an example of a Heading. The div tags above are examples of containers
-            within which each "section" of the webpage is contained.
-        </p>
+        <div class="text-section">
+          <h1>About Me</h1>
+          <p>
+            Hi, I'm Mehana! I'm a rising second year at Northeastern University studying Computer Science and Behavioral Neuroscience. 
+            I'm focused on improving my technical skills, specifically in Java, Python, and Typescript, through courses, clubs, and personal projects.
+            I'm interested in the integration of artificial intelligence and machine learning in medicine to make healthcare more accessible 
+            and personalized.
+          </p>
+        </div>
         <img src="images\profile pic 2.0.jpg", class="profile-pic circle-frame">
+        <a href="https://drive.google.com/file/d/1SZ3Hk0xifBIcL3mrwpLhPZVH_71EMTjY/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="resume-button">
+          Download Resume
+        </a>
+      </div>
+    </div>
+
+    
+    <div id="Contact">
+      <div class="contact-container">
+        <h1 class="contact-title">Contact Me!</h1> 
+        <form id="contact-form" class="contact-info">
+          <div class="input-message-container">
+            <div class="input-fields">
+              <input placeholder="Name:" type="text" id="formName" class="input-field" required>
+              <input placeholder="Email:" type="email" id="formEmail" class="input-field" required>
+              <input placeholder="Subject:" type="text" id="formSubject" class="input-field" required>
+            </div>
+            <textarea placeholder="Message:" id="formMessage" class="input-field message-field" required></textarea>
+          </div>
+          <button type="submit" class="email-send-button">Send!</button>
+        </form>
+        <div class="social-icons-2">
+          <a href="https://github.com/mehanana/mehanana" target="_blank" rel="noopener noreferrer">
+            <img src="images\github-logo.png">
+          </a>
+          <a href="https://www.linkedin.com/in/mehana-nagarur" target="_blank" rel="noopener noreferrer">
+            <img src="images\linkedin-logo.png">
+          </a>
+          <a href="mailto:mehana.nagarur@gmail.com" target="_blank" rel="noopener noreferrer">
+            <img src="images\email-logo.png">
+          </a>
+        </div>
       </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
