--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <a class="nav-link" href="#Experience">Experience</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projects</a>
+              <a class="nav-link" href="#Projects">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Skills</a>
@@ -116,6 +116,64 @@
         </div>
       </div>
     </div>
+
+    
+    <div id="Projects">
+      <div class="content">       
+      <h1 class="projects-content">Projects!</h1>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="images\email-logo.png" alt="First slide">
+              <div class="project-title">
+                <a href="https://github.com/mehanana/vital_hacks_2025" target="_blank" rel="noopener noreferrer">
+                  Skeletal, Muscular, and Joint Disorders Symptom Checker
+                </a>
+                <div class="project-description">
+                  A web application that helps users identify potential skeletal, muscular, and joint disorders based on their symptoms.
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="images\email-logo.png" alt="Second slide">
+              <div class="project-title">
+                <a href="https://github.com/mehanana/vital_hacks_2025" target="_blank" rel="noopener noreferrer">
+                  Name
+                </a>
+                <div class="project-description">
+                  Project description goes here.
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="images\email-logo.png" alt="Third slide">
+              <div class="project-title">
+                <a href="https://github.com/mehanana/vital_hacks_2025" target="_blank" rel="noopener noreferrer">
+                  Name
+                </a>
+                <div class="project-description">
+                  Project description goes here.
+                </div>
+              </div>
+            </div>
+          </div>
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </div>
+
     
     <div id="Contact">
       <div class="content">
