added skills section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="#Projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Skills</a>
+              <a class="nav-link" href="#Skills">Skills</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#Contact">Contact</a>
@@ -174,7 +174,84 @@
       </div>
     </div>
 
-    
+    <div id="Skills">
+      <div class="content inner">  
+        <h1 class="my-skills-title">My Skills</h1> 
+        <div class="skills-container">
+          <div class="skills-box">
+            <div class="skill-title">
+              <div class="skills-img">
+                <img src = 'images/email-logo.png' class="skill-icon">
+              </div>
+              <h3>HTML 5</h3>
+            </div>
+            <p>60%</p>
+          </div>
+
+          <div class="skills-box">
+            <div class="skill-title">
+              <div class="skills-img">
+                <img src = 'images/email-logo.png' class="skill-icon">
+              </div>
+              <h3>CSS</h3>
+            </div>
+            <p>60%</p>
+          </div>
+
+          <div class="skills-box">
+            <div class="skill-title">
+              <div class="skills-img">
+                <img src = 'images/email-logo.png' class="skill-icon">
+              </div>
+              <h3>Javascript</h3>
+            </div>
+            <p>50%</p>
+          </div>
+
+          <div class="skills-box">
+            <div class="skill-title">
+              <div class="skills-img">
+                <img src = 'images/email-logo.png' class="skill-icon">
+              </div>
+              <h3>Typescript</h3>
+            </div>
+            <p>50%</p>
+          </div>
+
+          <div class="skills-box">
+            <div class="skill-title">
+              <div class="skills-img">
+                <img src = 'images/email-logo.png' class="skill-icon">
+              </div>
+              <h3>Java</h3>
+            </div>
+            <p>80%</p>
+          </div>
+
+          <div class="skills-box">
+            <div class="skill-title">
+              <div class="skills-img">
+                <img src = 'images/email-logo.png' class="skill-icon">
+              </div>
+              <h3>Python</h3>
+            </div>
+            <p>60%</p>
+          </div>
+
+          <div class="skills-box">
+            <div class="skill-title">
+              <div class="skills-img">
+                <img src = 'images/email-logo.png' class="skill-icon">
+              </div>
+              <h3>Postgres</h3>
+            </div>
+            <p>40%</p>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
     <div id="Contact">
       <div class="content">
         <h1 class="contact-title">Contact Me!</h1> 
