added progress bars

--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
               </div>
               <h3>HTML 5</h3>
             </div>
-            <p>60%</p>
+            <div class="progress-container">
+              <div class="progress-bar" style="width: 60%"></div>
+            </div>
           </div>
 
           <div class="skills-box">
@@ -195,7 +197,9 @@
               </div>
               <h3>CSS</h3>
             </div>
-            <p>60%</p>
+            <div class="progress-container">
+              <div class="progress-bar" style="width: 60%"></div>
+            </div>
           </div>
 
           <div class="skills-box">
@@ -205,7 +209,9 @@
               </div>
               <h3>Javascript</h3>
             </div>
-            <p>50%</p>
+            <div class="progress-container">
+              <div class="progress-bar" style="width: 50%"></div>
+            </div>
           </div>
 
           <div class="skills-box">
@@ -215,7 +221,9 @@
               </div>
               <h3>Typescript</h3>
             </div>
-            <p>50%</p>
+            <div class="progress-container">
+              <div class="progress-bar" style="width: 50%"></div>
+            </div>
           </div>
 
           <div class="skills-box">
@@ -225,7 +233,9 @@
               </div>
               <h3>Java</h3>
             </div>
-            <p>80%</p>
+            <div class="progress-container">
+              <div class="progress-bar" style="width: 80%"></div>
+            </div>
           </div>
 
           <div class="skills-box">
@@ -235,7 +245,9 @@
               </div>
               <h3>Python</h3>
             </div>
-            <p>60%</p>
+            <div class="progress-container">
+              <div class="progress-bar" style="width: 60%"></div>
+            </div>
           </div>
 
           <div class="skills-box">
@@ -245,7 +257,9 @@
               </div>
               <h3>Postgres</h3>
             </div>
-            <p>40%</p>
+            <div class="progress-container">
+              <div class="progress-bar" style="width: 30%"></div>
+            </div>
           </div>
 
         </div>
