--- a/index.html
+++ b/index.html
@@ -136,29 +136,29 @@
                 </div>
               </div>
             </div>
-            <!--<div class="carousel-item">
-              <img class="d-block w-100" src="images\email-logo.png" alt="Second slide">
+            <div class="carousel-item">
+              <img class="d-block w-100" src="images\connections.png" alt="Second slide">
               <div class="project-title">
-                <a href="https://github.com/mehanana/vital_hacks_2025" target="_blank" rel="noopener noreferrer">
-                  Name
+                <a href="https://github.com/mehanana/connections" target="_blank" rel="noopener noreferrer">
+                  Connections
                 </a>
                 <div class="project-description">
-                  Project description goes here.
+                  A clone of the NYT Connections game; created in Fundamentals of Computer Science II (code available upon request on GitHub)
                 </div>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="images\email-logo.png" alt="Third slide">
+              <img class="d-block w-100" src="images\ztype.png" alt="Third slide">
               <div class="project-title">
-                <a href="https://github.com/mehanana/vital_hacks_2025" target="_blank" rel="noopener noreferrer">
-                  Name
+                <a href="https://github.com/mehanana/z-type" target="_blank" rel="noopener noreferrer">
+                  Z-type
                 </a>
                 <div class="project-description">
-                  Project description goes here.
+                  A clone of the game Z-Type; created in Fundamentals of Computer Science II (code available upon request)
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
